typescript/checker/tests/conformance/parser/ecmascript5/ErrorRecovery/parserCommaInTypeMemberList2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            8,
        ),
        hi: BytePos(
            9,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ErrorRecovery/parserCommaInTypeMemberList2.ts:1:9
  |
1 | var s = $.extend< { workItem: any }, { workItem: any, width: string }>({ workItem: this._workItem }, {});
  |         ^

